sort.basic.lessons.sort.basic.bubble.AlgBubbleSort2.scala.error
AlgBubbleSort2:10: error: not found: value l
    for(j<-0 to length-2-l)
                         ^