sort.basic.lessons.sort.basic.bubble.AlgBubbleSort2.scala.code
def bubbleSort2() {
  var length : Int = getValueCount();
  var i : Int = 0;
  var j : Int = 0;
  var tri : Boolean = true;
  
	for(i<-0 to length-2)
  {
    for(j<-0 to length-2-l)
    {
      if(isSmaller(i+1,i))
      {
        swap(i,i+1);
        tri=true;
      }
    }    
  }
}